kubernetes/app-redis.yml
---

apiVersion: v1
kind: Pod
metadata:
  name: redis
  namespace: getlock
  labels:
    app: redis
spec:
  containers:
    - name: redis
      image: redis:5.0.10
      command:
        - redis-server
        - "/redis-config/redis.conf"
      # env:
      #   - name: MASTER
      #     value: "true"
      ports:
        - containerPort: 6379
      resources:
        limits:
          cpu: "0.1"
          memory: "128Mi"
      volumeMounts:
        - mountPath: /redis-data
          name: data
        - mountPath: /redis-config
          name: config
  volumes:
    - name: data
      emptyDir: {}
    - name: config
      configMap:
        name: redis-config
        items:
        - key: redis-config
          path: redis.conf

---

apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: getlock
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
