kubernetes/app-api-v1.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v1
  namespace: getlock
  labels:
    app: api
    api-version: "v1"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
      api-version: "v1"
  template:
    metadata:
      labels:
        app: api
        api-version: "v1"
    spec:
      containers:
        - name: api-v1
          image: agrrh/getlock:v0.3.0
          # command:
          #   - python3
          # args:
          #   - getlock.py
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          configMap:
            name: api-v1-config
            items:
            - key: config
              path: config.yml

# TODO /health

---

apiVersion: v1
kind: Service
metadata:
  name: api-v1
  namespace: getlock
  labels:
    app: api
    api-version: "v1"
spec:
  selector:
    app: api
    api-version: "v1"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-api-v1
  namespace: getlock
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("getlock.agrrh.com") && PathPrefix("/v1/")
      middlewares:
        - name: https-only
          namespace: getlock
        - name: api-v1-stripprefix
          namespace: getlock
      services:
        - name: api-v1
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http
