kubernetes/app-api-v2.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-v2
  namespace: getlock
  labels:
    app: api
    api-version: "v2"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
      api-version: "v2"
  template:
    metadata:
      labels:
        app: api
        api-version: "v2"
    spec:
      containers:
        - name: api-v2
          image: agrrh/getlock:v1.0.3
          command:
            - python3
          args:
            - getlock.py
          ports:
            - containerPort: 8000
          volumeMounts:
            - mountPath: /app/config
              name: config
      volumes:
        - name: config
          configMap:
            name: api-v2-config
            items:
            - key: config
              path: config.yml

# TODO /health

---

apiVersion: v1
kind: Service
metadata:
  name: api-v2
  namespace: getlock
  labels:
    app: api
    api-version: "v2"
spec:
  selector:
    app: api
    api-version: "v2"
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-api-v2
  namespace: getlock
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("getlock.tech") && PathPrefix("/v2/")
      middlewares:
        - name: https-only
          namespace: getlock
        - name: api-v2-stripprefix
          namespace: getlock
      services:
        - name: api-v2
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-api-v2
  namespace: getlock
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host("getlock.tech") && PathPrefix("/v2/")
      middlewares:
        - name: api-v2-stripprefix
          namespace: getlock
      services:
        - name: api-v2
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    secretName: cert-getlock-tech
