kubernetes/app-docs.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: docs
  namespace: getlock
  labels:
    app: docs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docs
  template:
    metadata:
      labels:
        app: docs
    spec:
      containers:
        - name: docs
          image: agrrh/getlock-docs:v0.3.0
          ports:
          - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: docs
  namespace: getlock
  labels:
    app: docs
spec:
  selector:
    app: docs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-docs
  namespace: getlock
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`getlock.tech`)
      middlewares:
        - name: https-only
          namespace: getlock
      services:
        - name: docs
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-docs
  namespace: getlock
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`getlock.tech`)
      middlewares: []
      services:
        - name: docs
          namespace: getlock
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    secretName: cert-getlock-tech
